--- a/MiraAPI.Example/MiraAPI.Example.csproj
+++ b/MiraAPI.Example/MiraAPI.Example.csproj
@@ -9,11 +9,9 @@
 		<ProjectReference Include="..\MiraAPI\MiraAPI.csproj" />
 	</ItemGroup>
 
-	<ItemGroup>
-		<EmbeddedResource Include="Resources\ExampleButton.png" />
-		<EmbeddedResource Include="Resources\FortniteBanner.jpeg" />
-		<EmbeddedResource Include="Resources\TeleportButton.png" />
-	</ItemGroup>
+	 <ItemGroup>
+		 <EmbeddedResource Include="Resources\**\*.*" />
+	 </ItemGroup>
 
 	<Import Project="..\AmongUs.props" />
 </Project>
